--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,13 @@
     <item name="edit_phone" type="id" />
     <item name="edit_email" type="id" />
     <item name="edit_username" type="id" />
+    <item name="alquran" type="id" />
+    <item name="jilid_6" type="id" />
+    <item name="jilid_5" type="id" />
+    <item name="jilid_4" type="id" />
+    <item name="jilid_3" type="id" />
+    <item name="jilid_2" type="id" />
+    <item name="jilid_1" type="id" />
+    <item name="list_jilid" type="id" />
+    <item name="pilih_jilid" type="id" />
 </resources>
