--- a/app/src/main/res/layout/tambah_soal.xml
+++ b/app/src/main/res/layout/tambah_soal.xml
@@ -2,8 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tambah_soal"
-    android:layout_width="412dp"
-    android:layout_height="917dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#5DD62C"
     android:clipToOutline="true">
 
@@ -43,11 +43,10 @@
     <View
         android:id="@+id/group_27"
         android:layout_width="350dp"
-        android:layout_height="342dp"
+        android:layout_height="420dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="252dp"
-        android:layout_marginLeft="30dp"
         android:background="@drawable/rectangle_2" />
 
     <!-- Soal Ujian Title Background -->
@@ -56,60 +55,57 @@
         android:layout_width="350dp"
         android:layout_height="74dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="178dp"
-        android:layout_marginLeft="30dp"
         android:background="@drawable/rectangle_title_bg" />
 
-    <!-- Soal Ujian Title -->
+    <!-- Soal Ujian Title (DYNAMIC - Will be updated by code) -->
     <TextView
         android:id="@+id/soal_ujian_"
-        android:layout_width="202dp"
-        android:layout_height="56dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:layout_marginStart="52dp"
         android:layout_marginTop="188dp"
-        android:layout_marginLeft="52dp"
         android:gravity="top"
-        android:text="Soal Ujian \nJilid I"
+        android:text="Soal Ujian\nJILID I"
         android:textColor="#000000"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-    <!-- Nomor Soal Label -->
+    <!-- Bobot Nilai Label -->
     <TextView
-        android:id="@+id/nomor_soal"
-        android:layout_width="155.91dp"
-        android:layout_height="24dp"
+        android:id="@+id/bobot_nilai_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="270dp"
         android:layout_marginLeft="42dp"
         android:gravity="top"
-        android:text="Nomor Soal"
+        android:text="Bobot Nilai"
         android:textColor="#000000"
         android:textSize="20sp" />
 
-    <!-- Nomor Soal Input Background -->
+    <!-- Bobot Nilai Input Background -->
     <View
-        android:id="@+id/nomor_input_bg"
+        android:id="@+id/bobot_input_bg"
         android:layout_width="335dp"
         android:layout_height="43dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="295dp"
-        android:layout_marginLeft="37dp"
         android:background="@drawable/rectangle_input" />
 
-    <!-- NOMOR SOAL INPUT (EDIT TEXT) -->
+    <!-- BOBOT NILAI INPUT (EDIT TEXT) -->
     <EditText
-        android:id="@+id/edit_nomor_soal"
+        android:id="@+id/edit_bobot_nilai"
         android:layout_width="335dp"
         android:layout_height="43dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="295dp"
-        android:layout_marginLeft="37dp"
-        android:hint="Masukkan Nomor Soal"
+        android:hint="Masukkan Bobot Nilai (1-100)"
         android:textColor="#000000"
         android:textColorHint="#403C3C"
         android:textSize="18sp"
@@ -117,16 +113,17 @@
         android:paddingStart="12dp"
         android:paddingTop="10dp"
         android:inputType="number"
-        android:maxLines="1" />
+        android:maxLines="1"
+        android:text="10" />
 
     <!-- Soal Label -->
     <TextView
         android:id="@+id/soal"
-        android:layout_width="51dp"
-        android:layout_height="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="343dp"
+        android:layout_marginTop="350dp"
         android:layout_marginLeft="42dp"
         android:gravity="top"
         android:text="Soal"
@@ -137,22 +134,20 @@
     <View
         android:id="@+id/soal_input_bg"
         android:layout_width="335dp"
-        android:layout_height="108dp"
+        android:layout_height="200dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="367dp"
-        android:layout_marginLeft="37dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="375dp"
         android:background="@drawable/rectangle_input" />
 
     <!-- SOAL INPUT (EDIT TEXT) -->
     <EditText
         android:id="@+id/edit_soal"
         android:layout_width="335dp"
-        android:layout_height="108dp"
+        android:layout_height="200dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="367dp"
-        android:layout_marginLeft="37dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="375dp"
         android:hint="Masukkan Soal"
         android:textColor="#000000"
         android:textColorHint="#403C3C"
@@ -160,54 +155,37 @@
         android:background="@android:color/transparent"
         android:paddingStart="12dp"
         android:paddingTop="10dp"
+        android:paddingEnd="12dp"
         android:gravity="top"
         android:inputType="textMultiLine"
-        android:maxLines="5" />
+        android:maxLines="8"
+        android:scrollbars="vertical" />
 
-    <!-- Plus Button -->
-    <View
-        android:id="@+id/group_45"
-        android:layout_width="32dp"
-        android:layout_height="30dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="492dp"
-        android:layout_marginLeft="337dp"
-        android:background="@drawable/rounded_edittext_bg" />
-
-    <View
-        android:id="@+id/plus"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="338dp"
-        android:layout_marginTop="492dp"
-        android:background="@drawable/plus" />
-
-    <!-- Simpan Button -->
+    <!-- Simpan Button Background -->
     <View
         android:id="@+id/group_44"
-        android:layout_width="90dp"
-        android:layout_height="30dp"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="530dp"
-        android:layout_marginLeft="162dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="600dp"
         android:background="@drawable/rectangle_title_bg" />
 
+    <!-- Simpan Button -->
     <TextView
         android:id="@+id/simpan"
-        android:layout_width="95dp"
-        android:layout_height="30dp"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="530dp"
-        android:layout_marginLeft="160dp"
-        android:gravity="center_horizontal|top"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="600dp"
+        android:gravity="center"
         android:text="Simpan"
         android:textColor="#000000"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:clickable="true"
+        android:focusable="true" />
 
     <!-- ========== BOTTOM NAVIGATION ========== -->
 
